refactor: remove unused classes, pvs analysis
Remove old, unused classes. First PVS analysis run, leading to several
small fixes.